--- a/.github/workflows/isTwoJobsRunsOnSameRunner.yml
+++ b/.github/workflows/isTwoJobsRunsOnSameRunner.yml
@@ -22,6 +22,13 @@ jobs:
           ls
           
   example-job-2:
+    needs: example-job-1
+    runs-on: ubuntu-latest
+    steps:
+      - shell: bash
+        run: ls
+        
+  example-job-3:
     runs-on: ubuntu-latest
     steps:
       - shell: bash
