--- a/.github/workflows/run a spring boot project.yml
+++ b/.github/workflows/run a spring boot project.yml
@@ -5,10 +5,48 @@ jobs:
   build-run-test:
     runs-on: ubuntu-latest
     steps:
-      - shell: bash
-        run: |
-          echo $(java --version)
-          echo $(mvn --version)
-          echo $(aws --version)
-          echo $(docker --version)
+    
+    - uses: actions/checkout@v4
+    - name: Set up JDK 11
+      uses: actions/setup-java@v3
+      with:
+        java-version: '11'
+        distribution: 'temurin'
+        cache: maven
+
+    - name: Run aws-localstack
+      run: |
+        chmod +x start.sh
+        ./start.sh
+
+    - name: create a dynamodb table
+      env:
+        AWS_EC2_METADATA_DISABLED: true
+      run: |
+        chmod +x aws-configure.sh
+        ./aws-configure.sh
+
+        chmod +x dynamodb.sh
+        ./dynamodb.sh
+    - name: run test
+      shell: bash
+      run: |
+        chmod +x test.sh
+        ./test.sh
+        
+        # script_path="${GITHUB_WORKSPACE}/aws-configure.sh"
+        # sudo chmod +x "$script_path"
+        # "$script_path"
+          
+        # script_path="${GITHUB_WORKSPACE}/dynamodb.sh"
+        # chmod +x "$script_path"
+        # "$script_path"
+
+      # - name: run integration test
+      #   run: |
+      #     which aws
+      #     script_path="${GITHUB_WORKSPACE}/test.sh"
+      #     sudo chmod +x "$script_path"
+      #     "$script_path"
+
       
