Defining environment variables for a single workflow

--- a/.github/workflows/Defining environment variables for a single workflow.yml
+++ b/.github/workflows/Defining environment variables for a single workflow.yml
@@ -21,4 +21,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - shell: bash
-        run: echo "$DAY_OF_WEEK"
+        run: echo $DAY_OF_WEEK
