Setting default shell and working directory

--- a/.github/workflows/Setting default shell and working directory.yml
+++ b/.github/workflows/Setting default shell and working directory.yml
@@ -16,7 +16,7 @@ jobs:
     defaults:
       run:
         shell: bash
-        working-directory: ./scripts
+        working-directory: ~/
         
     steps:
       - run: pwd
