--- a/.github/workflows/Sharing data between jobs.yml
+++ b/.github/workflows/Sharing data between jobs.yml
@@ -5,6 +5,7 @@ jobs:
   sharingDataBetweenJobs:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - shell: bash
         run: |
           expr 1 + 0 > output.log
