--- a/.github/workflows/download artifact from same workflow.yml
+++ b/.github/workflows/download artifact from same workflow.yml
@@ -2,7 +2,7 @@ name: download artifact from same workflow
 on: workflow_dispatch
 
 jobs:
-  artifact:
+  artifact-upload:
     runs-on: ubuntu-latest
     steps:
       - shell: bash
@@ -16,6 +16,7 @@ jobs:
           
   download-artifact:
     runs-on: ubuntu-latest
+    needs: artifact-upload
     steps:
       - name: Download a single artifact
         uses: actions/download-artifact@v3
