--- a/.github/workflows/passing data from one job to another using matrix.yml
+++ b/.github/workflows/passing data from one job to another using matrix.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - shell: bash
         id: test
-        run: 1 > $GITHUB_OUTPUT
+        run: 1 >> $GITHUB_OUTPUT
         
   getPassedData:
     runs-on: ubuntu-latest
