--- a/.github/workflows/download artifact from same workflow.yml
+++ b/.github/workflows/download artifact from same workflow.yml
@@ -13,7 +13,10 @@ jobs:
         with:
           name: output-log-file
           path: output.log
-          
+
+
+      - name: get hash value
+        run: echo ${{ hashFiles('**')}}
   download-artifact:
     runs-on: ubuntu-latest
     needs: artifact-upload
