--- a/.github/workflows/Code Coverage Report Action.yml
+++ b/.github/workflows/Code Coverage Report Action.yml
@@ -37,5 +37,5 @@ jobs:
     - name: generate code coverage report
       uses: insightsengineering/coverage-action@v2
       with:
-        path: report.xml
+        path: ./report.xml
         diff: true
